[3.0.2]
        * [ADDED]: Full support for the interface translations.
        * [ADDED]: Polish translation.
        * [ADDED]: #219 Reset autoincrement feature to context menu of table and to structure toolbar in table window.
        * [BUGFIX]: Fixed deleting column from table that is the only column covered by an index or an "UPDATE OF" trigger.
        * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
        * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
        * [BUGFIX]: Valid objects in SQL editor are now highlighted and are Ctrl+clickable (the feature was there, but was broken and it didn't work).
        * [BUGFIX]: Fixed invalid 'modified' status when focusing out NumberMultiEditor in FormView, resulting in uncommited change on FormView, even there was no change.
        * [BUGFIX]: #2698 Fixed double precision numbers displaying in the Grid View.
        * [BUGFIX]: #2696 Fixed handling foreign keys when the main table was not renamed, just columns changed.
        * [BUGFIX]: #2713 Fixed foreign key actions in Foreign Key dialog, so they are no longer the same for ON UPDATE and ON DELETE, even they were configured differently.

[3.0.1]
        * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
        * [ADDED]: Implemented support for immediate editing of rows just added to the WITHOUT ROWID tables (previously the manual refresh of data view was required).
        * [BUGFIX]: Fixed support for expressions as DEFAULT value in table.
        * [BUGFIX]: Fixed support under Windows for running portable distribution, while having different version of Qt installed in the system (added the qt.conf file).

[3.0.0]